--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
       NOTION_SECRET: ${{ secrets.NOTION_SECRET }}
       TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
       TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+      GOOGLE_CALENDAR_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS_JSON}}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
